static/css/style.css
body {
    font-family: Arial, sans-serif;
    /* font-family: Copperplate,Copperplate Gothic Light,fantasy; */
    line-height: 1.6;
    color: #333;
}

header {
    background: #475f4f;
    color: white;
    padding: 1rem;
    text-align: center;
}

header h1 {
    margin-bottom: 1rem;
}

header h2 {
    font-size: .9rem;
    margin: 0;
}

nav ul {
    list-style: none;
    display: flex;
    justify-content: center;
    gap: 2rem;
}

nav a {
    color: white;
    text-decoration: none;
    font-weight: bold;
}

nav a:hover {
    color: #3498db;
}

main {
    padding: 2rem;
    min-height: 80vh;
    text-align: center;
}

footer {
    background: #ecf0f1;
    padding: 1rem;
    text-align: center;
    position: relative;
    bottom: 0;
    width: 100%;
}

/* Cursor styling */
.cursor {
    display: inline-block;
    width: 0.8rem;
    height: 2px;
    background: #333;
    vertical-align: bottom;
    margin-left: 2px;
    animation: blink 0.8s step-end infinite;
}

.letterhead {
    font-family: Copperplate,Copperplate Gothic Light,fantasy;
    position: relative;
    font-weight: 300;
    font-size: 4.5em;
    color: #ffffff;
}

.letterhead .text-wrapper {
    position: relative;
    display: inline-block;
    padding-top: 0.1em;
    padding-right: 0.05em;
    padding-bottom: 0.15em;
    line-height: 1em;
}

.letterhead .line {
    position: absolute;
    left: 0;
    top: 0;
    bottom: 0;
    margin: auto;
    height: 3px;
    width: 100%;
    background-color: #ffffff;
    transform-origin: 0.5 0;
}

.letterhead .ampersand {
    /* font-family: Arial, sans-serif; */
    font-style: italic;
    font-weight: 400;
    width: 1em;
    margin-right: -0.1em;
    margin-left: -0.1em;
}

.letterhead .letters {
    display: inline-block;
    opacity: 0;
}

.letterhead-subtitle {
    font-family: Copperplate,Copperplate Gothic Light,fantasy;
    position: relative;
    font-weight: 150;
    font-size: 1.2em;
    color: #ffffff;
}

.letterhead-subtitle .text-wrapper {
    position: relative;
    display: inline-block;
    padding-top: 0.1em;
    padding-right: 0.05em;
    padding-bottom: 0.15em;
    line-height: 1em;
}

.letterhead-subtitle .line {
    position: absolute;
    left: 0;
    top: 0;
    bottom: 0;
    margin: auto;
    height: 3px;
    width: 100%;
    background-color: #ffffff;
    transform-origin: 0.5 0;
}

.letterhead-subtitle .pipe {
    /* font-family: Arial, sans-serif; */
    font-weight: 150;
    width: 1em;
    margin-right: -0.1em;
    margin-left: -0.1em;
}

.letterhead-subtitle .letters {
    display: inline-block;
    opacity: 0;
}

/* Blink animation */
@keyframes blink {

    0%,
    100% {
        opacity: 1;
    }

    50% {
        opacity: 0;
    }
}

/* Responsive design */
@media (max-width: 600px) {
    nav ul {
        flex-direction: column;
        gap: 1rem;
    }

    main {
        padding: 1rem;
    }

    .cursor {
        height: 1.2rem;
    }
}

